apps/betaknesset/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: betaknesset-elasticsearch-kibana
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
  - host: betaknesset-elasticsearch.hasadna.org.il
    http:
      paths:
      - backend:
          serviceName: betaknesset-elasticsearch-es-http
          servicePort: 9200
  - host: betaknesset-kibana.hasadna.org.il
    http:
      paths:
      - backend:
          serviceName: betaknesset-kibana-kb-http
          servicePort: 5601
  tls:
  - hosts:
    - betaknesset-elasticsearch.hasadna.org.il
    - betaknesset-kibana.hasadna.org.il
    secretName: betaknesset-elasticsearch-kibana-cert
